--- a/software/common/lib-stm32l4/prj-stm32l496ze/lib-stm32l496ze.vcxproj
+++ b/software/common/lib-stm32l4/prj-stm32l496ze/lib-stm32l496ze.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{0BD90C29-1FE5-4F60-B90D-250EA8217C84}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
-    <BSP_VERSION>2018.12R2</BSP_VERSION>
+    <BSP_VERSION>2019.06</BSP_VERSION>
     <InPlaceBSPSubdir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
