--- a/software/common/lib-det-os/prj-example-stm32l496ze/main-det-os-example-stm32l496ze.vcxproj
+++ b/software/common/lib-det-os/prj-example-stm32l496ze/main-det-os-example-stm32l496ze.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{C19D5768-DDEA-4D98-A339-ADB8669501E9}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
-    <BSP_VERSION>2018.12R2</BSP_VERSION>
+    <BSP_VERSION>2019.06</BSP_VERSION>
     <InPlaceBSPSubdir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
