--- a/software/common/lib-det-os/prj-example-stm32l496ze/stm32.props
+++ b/software/common/lib-det-os/prj-example-stm32l496ze/stm32.props
@@ -10,7 +10,7 @@
 	<ItemDefinitionGroup>
 		<ClCompile>
 			<PreprocessorDefinitions>ARM_MATH_CM4;flash_layout;STM32L496ZG;STM32L496xx;%(ClCompile.PreprocessorDefinitions)</PreprocessorDefinitions>
-			<AdditionalIncludeDirectories>$(ProjectDir);$(BSP_ROOT)/STM32L4xxxx/STM32L4xx_HAL_Driver/Inc;$(BSP_ROOT)/STM32L4xxxx/STM32L4xx_HAL_Driver/Inc/Legacy;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Device/ST/STM32L4xx/Include;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Include;%(ClCompile.AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+			<AdditionalIncludeDirectories>%(ClCompile.AdditionalIncludeDirectories);$(ProjectDir);$(BSP_ROOT)/STM32L4xxxx/STM32L4xx_HAL_Driver/Inc;$(BSP_ROOT)/STM32L4xxxx/STM32L4xx_HAL_Driver/Inc/Legacy;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Core/Include;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Device/ST/STM32L4xx/Include;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/Include;$(BSP_ROOT)/STM32L4xxxx/CMSIS_HAL/RTOS2/Include</AdditionalIncludeDirectories>
 		</ClCompile>
 	</ItemDefinitionGroup>
 	<ItemDefinitionGroup>
@@ -25,10 +25,10 @@
 
 	<ItemDefinitionGroup>
 		<ToolchainSettingsContainer>
-			<ARMCPU>cortex-m4</ARMCPU>
-			<InstructionSet>THUMB</InstructionSet>
-			<ARMFPU>fpv4-sp-d16</ARMFPU>
-			<FloatABI>hard</FloatABI>
+			<ARMCPU  Condition="'%(ToolchainSettingsContainer.ARMCPU)' == ''">cortex-m4</ARMCPU>
+			<InstructionSet  Condition="'%(ToolchainSettingsContainer.InstructionSet)' == ''">THUMB</InstructionSet>
+			<ARMFPU  Condition="'%(ToolchainSettingsContainer.ARMFPU)' == ''">fpv4-sp-d16</ARMFPU>
+			<FloatABI  Condition="'%(ToolchainSettingsContainer.FloatABI)' == ''">hard</FloatABI>
 		</ToolchainSettingsContainer>
 	</ItemDefinitionGroup>
 </Project>
