--- a/software/common/lib-test/prj-stm32l496ze/lib-test-stm32l496ze.vcxproj
+++ b/software/common/lib-test/prj-stm32l496ze/lib-test-stm32l496ze.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{C5DD5C38-EE4F-4736-86AC-AB980D90CBB2}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
-    <BSP_VERSION>2018.12R2</BSP_VERSION>
+    <BSP_VERSION>2019.06</BSP_VERSION>
     <InPlaceBSPSubdir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
