--- a/software/common/lib-utils/prj-test-stm32l496ze/test-utils-stm32l496ze.vcxproj
+++ b/software/common/lib-utils/prj-test-stm32l496ze/test-utils-stm32l496ze.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{CD118854-7FE9-4B26-A795-D4D85E5FFDAD}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
-    <BSP_VERSION>2018.12R2</BSP_VERSION>
+    <BSP_VERSION>2019.06</BSP_VERSION>
     <InPlaceBSPSubdir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
