--- a/software/line-sensor/prj-test-client-stm32l496ze/main-line-sensor-test-client-stm32l496ze.vcxproj
+++ b/software/line-sensor/prj-test-client-stm32l496ze/main-line-sensor-test-client-stm32l496ze.vcxproj
@@ -14,7 +14,7 @@
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{F71BE47E-C8C7-46D3-AE55-F32BB0AAFDA0}</ProjectGuid>
     <BSP_ID>com.sysprogs.arm.stm32</BSP_ID>
-    <BSP_VERSION>2018.12R2</BSP_VERSION>
+    <BSP_VERSION>2019.06</BSP_VERSION>
     <InPlaceBSPSubdir />
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
