- fixed crystal capacitors - fixed spi2 gpio config - disabled external crystals as capacitors seems to be wrong

--- a/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
+++ b/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="..\src\consumer_producer_buffer.h" />
     <ClInclude Include="..\src\dma.h" />
     <ClInclude Include="..\src\global_data.h" />
+    <ClInclude Include="..\src\global_settings.h" />
     <ClInclude Include="..\src\gpio.h" />
     <ClInclude Include="..\src\interrupt_priorities.h" />
     <ClInclude Include="..\src\spi.h" />
