--- a/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj.filters
+++ b/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj.filters
@@ -82,5 +82,8 @@
     <ClInclude Include="..\src\spi.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\src\global_settings.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
