--- a/software/common/lib-stm32l4/prj-stm32l496ze/lib-stm32l496ze.vcxproj.filters
+++ b/software/common/lib-stm32l4/prj-stm32l496ze/lib-stm32l496ze.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="..\stm32\stm32l4xx_ll_cortex.h">
       <Filter>stm32</Filter>
     </ClInclude>
+    <ClInclude Include="..\stm32\stm32l4xx_ll_crc.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\startup_stm32l496xx.s">
