--- a/software/common/lib-stm32l4/prj-stm32l496zg/lib-stm32l496zg.vcxproj.filters
+++ b/software/common/lib-stm32l4/prj-stm32l496zg/lib-stm32l496zg.vcxproj.filters
@@ -91,5 +91,8 @@
     <ClInclude Include="..\stm32\stm32l496xx.h">
       <Filter>stm32</Filter>
     </ClInclude>
+    <ClInclude Include="..\stm32\stm32l4xx_ll_crc.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
