- added a bit more code for spi communication - added a bit more sensor status code

--- a/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
+++ b/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj
@@ -68,6 +68,7 @@
     <ClCompile Include="..\src\gpio.c" />
     <ClCompile Include="..\src\main.c" />
     <ClCompile Include="..\src\spi.c" />
+    <ClCompile Include="..\src\status.c" />
     <ClCompile Include="..\src\system_clocks.c" />
     <ClCompile Include="..\src\watchdog.c" />
   </ItemGroup>
@@ -90,6 +91,7 @@
     <ClInclude Include="..\src\gpio.h" />
     <ClInclude Include="..\src\interrupt_priorities.h" />
     <ClInclude Include="..\src\spi.h" />
+    <ClInclude Include="..\src\status.h" />
     <ClInclude Include="..\src\system_clocks.h" />
     <ClInclude Include="..\src\watchdog.h" />
   </ItemGroup>
