--- a/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj.filters
+++ b/software/line-sensor/prj-stm32l151ve/main-line-sensor-stm32l151ve.vcxproj.filters
@@ -47,6 +47,9 @@
     <ClCompile Include="..\src\spi.c">
       <Filter>src</Filter>
     </ClCompile>
+    <ClCompile Include="..\src\status.c">
+      <Filter>src</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src\adc.h">
@@ -83,6 +86,9 @@
       <Filter>src</Filter>
     </ClInclude>
     <ClInclude Include="..\src\global_settings.h">
+      <Filter>src</Filter>
+    </ClInclude>
+    <ClInclude Include="..\src\status.h">
       <Filter>src</Filter>
     </ClInclude>
   </ItemGroup>
