- added code for line sensor to receive requests and respond to them (only reset command)

--- a/software/common/lib-stm32l1/prj-stm32l151ve/lib-stm32l151ve.vcxproj
+++ b/software/common/lib-stm32l1/prj-stm32l151ve/lib-stm32l151ve.vcxproj
@@ -68,6 +68,7 @@
     <ClInclude Include="..\stm32\stm32l1xx_ll_cortex.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_crc.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_dma.h" />
+    <ClInclude Include="..\stm32\stm32l1xx_ll_exti.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_gpio.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_i2c.h" />
     <ClInclude Include="..\stm32\stm32l1xx_ll_iwdg.h" />
