--- a/software/common/lib-stm32l1/prj-stm32l151ve/lib-stm32l151ve.vcxproj.filters
+++ b/software/common/lib-stm32l1/prj-stm32l151ve/lib-stm32l151ve.vcxproj.filters
@@ -77,6 +77,9 @@
     <ClInclude Include="..\stm32\stm32l1xx_ll_crc.h">
       <Filter>stm32</Filter>
     </ClInclude>
+    <ClInclude Include="..\stm32\stm32l1xx_ll_exti.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src\startup_stm32l151xe.s">
