--- a/software/line-sensor/prj-test-client-stm32l496zg/main-line-sensor-test-client-stm32l496zg.vcxproj.filters
+++ b/software/line-sensor/prj-test-client-stm32l496zg/main-line-sensor-test-client-stm32l496zg.vcxproj.filters
@@ -18,5 +18,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\src-test-client\main.c" />
+    <ClCompile Include="..\src-test-client\motor_control.c" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\src-test-client\motor_control.h" />
   </ItemGroup>
 </Project>
