--- a/software/line-sensor/prj-data-collector-firmware-stm32l496zg/main-data-collector-firmware-stm32l496zg.vcxproj.filters
+++ b/software/line-sensor/prj-data-collector-firmware-stm32l496zg/main-data-collector-firmware-stm32l496zg.vcxproj.filters
@@ -20,9 +20,11 @@
     <ClCompile Include="..\src-data-collector-firmware\main.c" />
     <ClCompile Include="..\src-data-collector-firmware\motor_control.c" />
     <ClCompile Include="..\src-data-collector-firmware\gpio.c" />
+    <ClCompile Include="..\src-data-collector-firmware\global_data.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\src-data-collector-firmware\motor_control.h" />
     <ClInclude Include="..\src-data-collector-firmware\gpio.h" />
+    <ClInclude Include="..\src-data-collector-firmware\global_data.h" />
   </ItemGroup>
 </Project>
