--- a/software/line-sensor/prj-position-controller-stm32l496zg/main-position-controller-stm32l496zg.vcxproj.filters
+++ b/software/line-sensor/prj-position-controller-stm32l496zg/main-position-controller-stm32l496zg.vcxproj.filters
@@ -35,5 +35,6 @@
     <ClInclude Include="..\src-position-controller\interrupt_priorities.h" />
     <ClInclude Include="..\src-position-controller\client_communication_uart.h" />
     <ClInclude Include="..\src-position-controller\position_controller.h" />
+    <ClInclude Include="..\src-position-controller\arm.h" />
   </ItemGroup>
 </Project>
