--- a/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj
+++ b/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj
@@ -78,6 +78,7 @@
     <ClInclude Include="..\stm32\stm32wbxx_ll_bus.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_cortex.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_dma.h" />
+    <ClInclude Include="..\stm32\stm32wbxx_ll_exti.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_gpio.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_hsem.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_ipcc.h" />
@@ -85,6 +86,7 @@
     <ClInclude Include="..\stm32\stm32wbxx_ll_pka.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_pwr.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_rcc.h" />
+    <ClInclude Include="..\stm32\stm32wbxx_ll_rtc.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_spi.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_system.h" />
     <ClInclude Include="..\stm32\stm32wbxx_ll_utils.h" />
