--- a/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj.filters
+++ b/software/common/lib-stm32wb/prj-stm32wb55rg/lib-stm32wb55rg.vcxproj.filters
@@ -115,5 +115,11 @@
     <ClInclude Include="..\conf\utilities_conf.h">
       <Filter>conf</Filter>
     </ClInclude>
+    <ClInclude Include="..\stm32\stm32wbxx_ll_exti.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
+    <ClInclude Include="..\stm32\stm32wbxx_ll_rtc.h">
+      <Filter>stm32</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
